--- a/.github/workflows/rmarkdown.yml
+++ b/.github/workflows/rmarkdown.yml
@@ -19,7 +19,7 @@ jobs:
         run: |
           options(pkgType = "binary")
           options(install.packages.check.source = "no")
-          install.packages(c("remotes", "bookdown", "formatR", "tinytex"))
+          install.packages(c("remotes", "tinytex", "rmarkdown", "formatR", "kableExtra", "ragg"))
           tinytex::install_tinytex()
           remotes::install_deps(dependencies = TRUE)
         shell: Rscript {0}
