--- a/.github/workflows/rmarkdown.yml
+++ b/.github/workflows/rmarkdown.yml
@@ -20,7 +20,7 @@ jobs:
           options(pkgType = "binary")
           options(install.packages.check.source = "no")
           install.packages(c("remotes", "tinytex", "rmarkdown", "formatR", "kableExtra", "ragg"))
-          tinytex::install_tinytex()
+          tinytex::install_tinytex(extra_packages="float.sty")
           remotes::install_deps(dependencies = TRUE)
         shell: Rscript {0}
       - name: Render Rmarkdown files
